fixed posts permalinks

--- a/_posts/2019-11-25-pmsp_laz.md
+++ b/_posts/2019-11-25-pmsp_laz.md
@@ -3,6 +3,9 @@ layout: post
 published: true
 title: Tutorial - São Paulo City LiDAR
 subtitle: 
+categories: 
+permalink: /blog/pmsp_laz/
+published: true
 tags:
   - lidar
   - opendata
