--- a/_posts/2020-01-27-faq_bjgeo.md
+++ b/_posts/2020-01-27-faq_bjgeo.md
@@ -3,6 +3,8 @@ layout: post
 published: true
 title: FAQ about BJGEO
 subtitle: 
+categories: 
+permalink: /blog/faq_bjgeo/
 tags:
   - bjgeo
   - publishing
