--- a/_posts/2020-01-28-utm_south.md
+++ b/_posts/2020-01-28-utm_south.md
@@ -3,6 +3,8 @@ layout: post
 published: true
 title: UTM 23S??
 subtitle: A common cartographical mistake in articles
+categories: 
+permalink: /blog/utm_23s/
 tags:
   - bjgeo
   - publishing
