update publications and utm post

--- a/_posts/2020-01-28-utm_south.md
+++ b/_posts/2020-01-28-utm_south.md
@@ -15,7 +15,7 @@ tags:
 
 If there's one thing that I see all the time as a reviewer, is a map of some study area in Brazil with a caption like "UTM coordinates zone 23S".  
 
-That is wrong.  
+Don't do that.  
 
 Why? I'll tell you.  
 The [UTM system](https://en.wikipedia.org/wiki/Universal_Transverse_Mercator_coordinate_system) divides the Earth into 60 zones (or fuses) of 6&deg; longitude (plus some special zones at high latitudes). Zone 1 starts at 180&deg; and zone numbering increases eastwards.  
